# ChangeLog for dev-ruby/riddle
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*riddle-1.0.6 (06 Dec 2009)

  06 Dec 2009; Hans de Graaff <graaff@gentoo.org> +riddle-1.0.6.ebuild,
  +metadata.xml:
  Initial import, refactored out of thinking_sphinx.
