@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST riddle-1.0.6.gem 35328 RMD160 6c44b96e8ad577b60e9d14f155147ea33539b5b7 SHA1 7a36d1ac067458a3c473f95e7faea838910cde39 SHA256 12a88c3ccf29f9dc5eda3b704a063b57d6707233886d0843811b6ae224985825
+DIST riddle-1.0.8.gem 35328 RMD160 44d95f2b786bfbc557043f3f2d7180594bf780d5 SHA1 d848b089664d4de501039afa497caf864f997141 SHA256 72d6d7c7dd612c457d25854180793af57f5a8e42701ddd44df585388866289c1
 EBUILD riddle-1.0.6.ebuild 406 RMD160 75163becfa312d8f6f88256c0af60fbc5e93ed16 SHA1 87a81150910579bc6cd3b57e47729c7be8489f39 SHA256 fed283e7378d3aee94c1fc68a02a950a71f8a753a3d34c968894f9de9c2dd4a5
-MISC ChangeLog 288 RMD160 0476d62563a74bee7aa835e9121d35c41c8e1d22 SHA1 c68c8acea89b10a7a285bca2159b8f018d262175 SHA256 022e47f2a29c9bd645f09c703c6f7a16f6f5ef4c6da8e7c7802567709c88b4fb
+EBUILD riddle-1.0.8.ebuild 406 RMD160 75163becfa312d8f6f88256c0af60fbc5e93ed16 SHA1 87a81150910579bc6cd3b57e47729c7be8489f39 SHA256 fed283e7378d3aee94c1fc68a02a950a71f8a753a3d34c968894f9de9c2dd4a5
+MISC ChangeLog 447 RMD160 88a22692cee7b2b9b2070135e179446dc916a17d SHA1 f88c63fd3476c3b068ec40bb9a12878d3e0f68c2 SHA256 2cc673f07037a4fa164ce585064600ce9bd6bddf166f8b886159cacf398d37bb
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksbkAQACgkQVYU2Ai8K93diXgCgltTRc1tJs727CVhfb8OeHDyC
-PXwAoJiCR3QAQqNjuTwP6M8f69OCg5aT
-=773P
+iEYEARECAAYFAksn9doACgkQeM7EJeUH71MdOwCggDr1BgU9l5HTtDuBsUG9WUoa
+c3QAmgOQEXuCEJMXcpTi32+EnOoaGH76
+=Zgtz
 -----END PGP SIGNATURE-----
