@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*riddle-1.0.8 (15 Dec 2009)
+
+  15 Dec 2009; Hans de Graaff <graaff@gentoo.org> +riddle-1.0.8.ebuild:
+  Version bump, required by new thinking-sphinx version.
+
 *riddle-1.0.6 (06 Dec 2009)
 
   06 Dec 2009; Hans de Graaff <graaff@gentoo.org> +riddle-1.0.6.ebuild,
